<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_home">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/emptymsg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <Button
                android:id="@+id/btn_activitylifecycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_lifecycle"></Button>
            <Button
                android:id="@+id/btn_scrollActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/longstringactivity"></Button>
            <Button
                android:id="@+id/btn_opengoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="#DD9E9E"
                android:text="@string/opengoogle"></Button>
            <Button
                android:id="@+id/btn_dialphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialphone"></Button>
            <Button
                android:id="@+id/btn_passdata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passdata"></Button>
            <Button
                android:id="@+id/btn_getresult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/getresult"></Button>
            <Button
                android:id="@+id/btn_savedInstanceActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Saved Instance Activity"></Button>
            <Button
                android:id="@+id/btn_views_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Multiviews Activity"></Button>

        </LinearLayout>
    </ScrollView>

    <fragment
        android:id="@+id/nav_host_fragment_content_home"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />
</androidx.constraintlayout.widget.ConstraintLayout>