<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ButtonAndToastActivity">

    <TextView
        android:id="@+id/tv_urnmame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/urname"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/edt_urname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_urname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="sfds"
        android:hint="@string/urnamehint"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="#2196F3"
        android:textColorHint="@color/textColorHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_urnmame"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck"></EditText>

    <Button
        android:id="@+id/btn_ShowToast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sayh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"></Button>


</androidx.constraintlayout.widget.ConstraintLayout>